added comment on Jersey dependency

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
   <dependencies>
 
+    <!-- JAX-RS Jersey implementation -->
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-client</artifactId>
