--- a/client.properties.sample
+++ b/client.properties.sample
@@ -1,3 +1,4 @@
+# set variables and rename this file as "client.properties"
 url=<target url>
 body={"text" : "Hi there!"}
 proxy=http://proxy.sample.com:80
